--- a/settings.yml
+++ b/settings.yml
@@ -1,58 +1,38 @@
 modules:
-  - name: "Introduction"
+  - name: "Coding Study"
     lessons:
       - name: "About the Study"
-        file: "00-intro/about.md"
+        file: "study/01-about.md"
         shortName: "about"
       - name: "Consent"
-        file: "00-intro/consent.md"
+        file: "study/02-consent.md"
         shortName: "consent"
-  - name: "Pre-Survey"
-    lessons:
-      - name: "Demographics"
-        file: "01-pre-survey/demographics.md"
-        shortName: "demographics"
-      - name: "Background"
-        file: "01-pre-survey/background.md"
-        shortName: "background"
-      - name: "Attitudes"
-        file: "01-pre-survey/attitudes.md"
-        shortName: "attitudes"
-  - name: "Lesson"
-    lessons:
-      - name: "Condition Training"
-        file: "02-lesson/condition-training.md"
-        shortName: "condition-training"
-      - name: "Practice Trial I" 
-        file: "02-lesson/practice-easy.md"
-        shortName: "practice-easy"
-      - name: "Practice Trial II"
-        file: "02-lesson/practice-hard.md"
-        shortName: "practice-hard"
-      - name: "Lesson Summary"
-        file: "02-lesson/lesson-summary.md"
+      - name: "Pre-Survey"
+        file: "study/03-pre-survey.md"
+        shortName: "pre-survey"
+      - name: "Lesson Instructions"
+        file: "study/04-instructions.md"
+        shortName: "instructions"
+      - name: "Lesson Part I" 
+        file: "study/05-lesson-easy.md"
+        shortName: "lesson-easy"
+      - name: "Lesson Part II"
+        file: "study/06-lesson-hard.md"
+        shortName: "lesson-hard"
+      - name: "Lesson Summary" 
+        file: "study/07-lesson-summary.md"
         shortName: "lesson-summary"
-  - name: "Persistence Task" 
-    lessons: 
-      - name: "Task 1" 
-        file: "03-persistence-task/task-1.md"
-        shortName: "task-1"
-      - name: "Task 2" 
-        file: "03-persistence-task/task-2.md"
-        shortName: "task-2"
-      - name: "Task 3" 
-        file: "03-persistence-task/task-3.md"
-        shortName: "task-3"
-   - name: "Post-Survey"
-     lessons: 
-       - name: "Perceptions" 
-         file: "04-post-survey/perceptions.md"
-         shortName: "perceptions"
-       - name: "Follow-up" 
-         file: "post-survey/follow-up.md"
-         shortName: "follow-up"
-       - name: "Thank You" 
-         file: "04-post-survey/thank-you.md"
-         shortName: "thank-you"
-         
+      - name: "Extra Practice 1" 
+        file: "study/07-persistence-task-1.md"
+        shortName: "persistence-task-1"
+      - name: "Continue?" 
+        file: "study/landing.md"
+        shortName: "landing"
+      - name: "Extra Practice 2"
+        file: "study/08-persistence-task-2.md"
+        shortName: "persistence-task-2"
+      - name: "Continue?" 
+        file: "study/landing.md"
+        shortName: "landing"
         
+    
