Updates to lesson and yml

--- a/settings.yml
+++ b/settings.yml
@@ -13,26 +13,19 @@ modules:
       - name: "Lesson Instructions"
         file: "study/04-instructions.md"
         shortName: "instructions"
-      - name: "Lesson Part I" 
-        file: "study/05-lesson-easy.md"
-        shortName: "lesson-easy"
-      - name: "Lesson Part II"
-        file: "study/06-lesson-hard.md"
-        shortName: "lesson-hard"
-      - name: "Lesson Summary" 
-        file: "study/07-lesson-summary.md"
+      - name: "Lesson 1: Operators"
+        file: "study/05-lesson-operators.md"
+        shortName: "lesson-1"
+      - name: "Lesson 2: Variables"
+        file: "study/06-lesson-variables.md"
+        shortName: "lesson-2"
+      - name: "Lesson 3: Vectors and Functions"
+        file: "study/07-lesson-vectors-and-functions.md"
+        shortName: "lesson-3"
+      - name: "Lesson 4: Data Frames and More Functions"
+        file: "study/08-lesson-data-frames.md"
+        shortName: "lesson-4"
+      - name: "Lesson Summary"
+        file: "study/09-lesson-summary.md"
         shortName: "lesson-summary"
-      - name: "Extra Practice 1" 
-        file: "study/08-persistence-task-1.md"
-        shortName: "persistence-task-1"
-      - name: "Continue?" 
-        file: "study/landing.md"
-        shortName: "landing"
-      - name: "Extra Practice 2"
-        file: "study/09-persistence-task-2.md"
-        shortName: "persistence-task-2"
-      - name: "Continue?" 
-        file: "study/landing.md"
-        shortName: "landing"
-        
     
